# this-album-cover-doesnt-exist

./: .gitignore  README.md  gan.py  gan_mnist.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml  code_formatting.yml  format.yml  tests.yml
common/: setup.py
common/common/: utils.py
common/common.egg-info/: PKG-INFO
data/: app.py  spotify_utils.py
data/database/: __init__.py  tables.py
data/scripts/: download_spotify_album_images.py  store_album_data_given_artists.py  store_artists_given_playlists.py  store_track_data_given_albums.py  store_user_playlists.py
data_collection/: README.md  app.py  file_utils.py  spotify_utils.py  utils.py
data_collection/database/: __init__.py  tables.py
data_collection/scripts/: store_album_data_given_artists.py  store_artists_given_playlists.py  store_track_data_given_albums.py  store_user_playlists.py
ml/: discriminators.py  gan_mnist.py  generators.py
ml/model_components/: common.py  discriminators.py  generators.py  layers.py
ml/model_configs/: dcgan.yml
ml/monitoring/: utilities.py
ml/scripts/: common.py  train_conditional_mnist_gan.py  train_mnist_gan.py  train_mnist_gan[wandb].py  train_mnist_gan_wandb.py  train_mnist_gan_with_class_prompts.py
ml/training/: contexts.py  data.py  losses.py
ml/utilities/: image_utils.py  mlflow_utils.py
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/e3f6ace7338f442d8f482120fc02c065/: meta.yaml
mlruns/1/e3f6ace7338f442d8f482120fc02c065/metrics/: discriminator_loss  generator_loss
tests/: test_image_utils.py  test_ml.py
