[tool.poetry]
name = "this-album-cover-doesnt-exist"
version = "0.1.0"
description = ""
authors = ["Daniel Varoli <daniel.varoli@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.2"
spotipy = "^2.19.0"
pony = "^0.7.14"
pyinstrument = "^4.1.1"
tqdm = "^4.62.3"
ipython = "^7.30.1"
Pillow = "^8.4.0"
mlflow = "^1.22.0"
wandb = "^0.12.9"
tensorflow = "^2.7.0"
common = { path = "./common/"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
